CHANGELOG
---------
v1.3.0
- Do not allow players to have more than 1 unit of each rare item
- Added 3 more items: Revealic, Thievic and Summonic
- Disabled direct hilighting of nicknames by the bot

v1.2.1
- Added "!auto search" command
- Added 2 more items: Switchic and Drainic

v1.2.0
- Added new user commands for items: !search, !use, !inventory, !drop
- Added ability to fight enemy leaders using: !challenge
- Reward the attacker 5 additional score points if he/she finishes off an enemy
- Allow running !status without arguments to show the status of the issuing player

v1.1.1
- Fixed minor issues in v1.1.0

v1.1.0
- Added the leader characters: Dracula and Zombilo (they give their soldiers substantial boost when they appear)
- Added !auto commands that let the user change its settings to auto register/attack/heal
- Display the round length in time when the round ends
- Added !version command
- Fixed other issues

v1.0.2
- Enabled the round to end when all remaining players of one type unregister

v1.0.1
- Minor fix that prevents bot from crashing when declaring the winner

v1.0.0
- First stable release of Zombire IRC bot